--- a/src/app/common/product-slider/product-slider.component.html
+++ b/src/app/common/product-slider/product-slider.component.html
@@ -1,107 +1,7 @@
 <div class="container">
   <div class="card-deck">
-    <div class="card col-12 lg-col-2" *ngFor="let products on productsOnSlider">
-      <product-card>
-        {{ products }}
-      </product-card>
+    <div class="card col-12 lg-col-2" *ngFor="let product on productsOnSlider">
+      <app-product-card [products]="product"></app-product-card>
     </div>
   </div>
-  <!-- 
-  <div class="card-deck mb-3 text-center">
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">{{ priceTable[0].name }}</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">${{ priceTable[0].price }}
-          <small class="text-muted">/ mo</small>
-        </h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li *ngFor="let item of priceTable[0].options">
-            {{ item }}
-          </li>
-        </ul>
-        <button
-          type="button"
-          class="btn btn-lg btn-block btn-outline-primary"
-        >{{ priceTable[0].btnText }}</button>
-      </div>
-    </div>
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">{{ priceTable[1].name }}</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">${{ priceTable[1].price }}
-          <small class="text-muted">/ hó</small>
-        </h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li *ngFor="let item of priceTable[1].options">
-            {{ item }}
-          </li>
-        </ul>
-        <button
-          type="button"
-          class="btn btn-lg btn-block btn-outline-primary"
-        >{{ priceTable[1].btnText }}</button>
-      </div>
-    </div>
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">{{ priceTable[2].name }}</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">${{ priceTable[2].price }}
-          <small class="text-muted">/ hó</small>
-        </h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li *ngFor="let item of priceTable[2].options">
-            {{ item }}
-          </li>
-        </ul>
-        <button
-          type="button"
-          class="btn btn-lg btn-block btn-outline-primary"
-        >{{ priceTable[2].btnText }}</button>
-      </div>
-    </div>
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">{{ priceTable[2].name }}</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">${{ priceTable[2].price }}
-          <small class="text-muted">/ hó</small>
-        </h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li *ngFor="let item of priceTable[2].options">
-            {{ item }}
-          </li>
-        </ul>
-        <button
-          type="button"
-          class="btn btn-lg btn-block btn-outline-primary"
-        >{{ priceTable[2].btnText }}</button>
-      </div>
-    </div>
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">{{ priceTable[2].name }}</h4>
-      </div>
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">${{ priceTable[2].price }}
-          <small class="text-muted">/ hó</small>
-        </h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li *ngFor="let item of priceTable[2].options">
-            {{ item }}
-          </li>
-        </ul>
-        <button
-          type="button"
-          class="btn btn-lg btn-block btn-outline-primary"
-        >{{ priceTable[2].btnText }}</button>
-      </div>
-    </div>
-  </div>
-</div> -->
+</div>
