--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,9 +1,9 @@
-<div class="card" style="width: 18rem;">
+<div class="card product-card">
     <img [src]="product.image" class="card-img-top" alt="product_image">
     <div class="card-body">
-      <h5 class="card-title"> {{ product.name }}</h5>
-      <p class="card-text"> {{ product.description }}</p>
-      <p class="card-text">Current stock: {{product.stock}}</p>
-      <p class="card-text">Price: {{product.price}}</p> 
+      <h6 class="card-title"> {{ product.name }}</h6>
+      <small class="text-muted"> {{ product.description }}</small>
+      <p class="card-text mt-3">Jelenlegi készlet: {{product.stock}}</p>
+      <p class="card-text">Ár: {{product.price}}</p> 
     </div>
   </div>
