--- a/src/app/common/product-slider/product-slider.component.html
+++ b/src/app/common/product-slider/product-slider.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card-deck">
-    <div class="card col-12 lg-col-2" *ngFor="let product on productsOnSlider">
-      <app-product-card [products]="product"></app-product-card>
+    <div class="" *ngFor="let product of featured">
+      <app-product-card [product]="product"></app-product-card>
     </div>
   </div>
 </div>
