picture placement fixed in product card

--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 <div class="card product-card">
-    <img [src]="product.image" class="card-img-top" alt="product_image">
+    <img [src]="product.image" class="card-img-top fit-image" alt="product_image">
     <div class="card-body">
       <h6 class="card-title"> {{ product.name }}</h6>
       <small class="text-muted"> {{ product.description }}</small>
