--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -1,4 +1,11 @@
 .product-card {
     margin: 0 5px;
     width: 200px;
+
+    .fit-image{
+        width: 100%;
+        object-fit: contain;
+        height: 300px;
+    }
+
 }
