--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,9 +1,11 @@
 <div class="card product-card">
-    <img [src]="product.image" class="card-img-top fit-image" alt="product_image">
-    <div class="card-body">
-      <h6 class="card-title"> {{ product.name }}</h6>
-      <small class="text-muted"> {{ product.description }}</small>
+  <img [src]="product.image" class="card-img-top fit-image" alt="product_image">
+  <div class="card-body d-flex flex-column">
+    <h6 class="card-title"> {{ product.name }}</h6>
+    <small class="text-muted"> {{ product.description }}</small>
+    <div class="card-infos">      
       <p class="card-text mt-3">Jelenlegi készlet: {{product.stock}}</p>
-      <p class="card-text">Ár: {{product.price}}</p> 
+      <p class="card-text">Ár: {{product.price}}</p>
     </div>
   </div>
+</div>
