--- a/src/app/common/product-list/product-list.component.html
+++ b/src/app/common/product-list/product-list.component.html
@@ -1,4 +1,6 @@
-<div class="row">
+<p>product list</p>
+
+<!-- <div class="row">
     <div class="col-8">
       <h3>Termékek</h3>
       <table class="table table-striped">
@@ -15,4 +17,4 @@
       </table>
     </div>
   </div>
-  
+   -->
