service onsale works

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,1 +1,4 @@
+<h3>Featured:</h3>
 <app-product-slider [featured]="featuredFive"></app-product-slider>
+<h3>Discount:</h3>
+<app-product-slider [featured]="onsaleFive"></app-product-slider>
