--- a/src/app/common/product-list/product-list.component.html
+++ b/src/app/common/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card-deck">
-    <div class="" *ngFor="let product of products">
+    <div class="" *ngFor="let product of list">
       <app-product-card [product]="product"></app-product-card>
     </div>
   </div>
