--- a/src/app/page/cat01/cat01.component.html
+++ b/src/app/page/cat01/cat01.component.html
@@ -1,1 +1,4 @@
+<h3>Featured:</h3>
+<app-product-slider [featured]="featuredFive"></app-product-slider>
+<h3>{{title}}</h3>
 <app-product-list [list]="categoryZero"></app-product-list>
