--- a/src/app/page/cat02/cat02.component.html
+++ b/src/app/page/cat02/cat02.component.html
@@ -1,1 +1,4 @@
-<p>cat02 works!</p>
+<h3>Featured:</h3>
+<app-product-slider [featured]="featuredFive"></app-product-slider>
+<h3>{{title}}</h3>
+<app-product-list [list]="categoryOne"></app-product-list>
