--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,16 +1,16 @@
-<div class="card product-card">
-  <img [src]="product.image" class="card-img-top fit-image" alt="product_image">
-  <div class="card-body d-flex flex-column">
-    <h6 class="card-title"> {{ product.name }}</h6>
+<div class="card product-card mb-4">
+  <img [src]="product.image" class="card-img-top fit-image bg-light" alt="product_image">
+  <div class="card-body bg-light d-flex flex-column">
+    <h6 class="card-title text-center"> {{ product.name }}</h6>
     <small class="text-muted"> {{ product.description }}</small>
-    <div class="card-infos">
+    <div class="card-infos text-center">
       <p class="card-text mt-3">Jelenlegi készlet: {{product.stock}}</p>
       <p class="card-text" *ngIf="product.onsale">Ár:
         <del class="mr-2">{{product.price}}</del> <span
-          class=" text-danger">{{product.onsaleprice}}</span>
-        HUF
+          class=" text-danger">{{product.onsaleprice}} Ft</span>
       </p>
-      <p class="card-text" *ngIf="!product.onsale">Ár: {{product.price}} HUF</p>
+      <p class="card-text" *ngIf="!product.onsale">Ár: {{product.price}} Ft</p>
+      <button class="btn btn-warning"><i class="fa fa-cart-plus mr-2"></i>Kosárba</button>
     </div>
   </div>
 </div>
