--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -1,7 +1,15 @@
 .product-card {
     margin: 0 5px;
     width: 200px;
-    height: 750px;
+    height: 770px;
+    transition: transform 0.2s;
+    
+
+    &:hover {
+        transform: scale(1.03);
+        box-shadow: 3px 3px rgba(116, 116, 116, 0.294);
+    }
+  
 
     .fit-image{
         width: 100%;
