--- a/src/app/common/product-list/product-list.component.html
+++ b/src/app/common/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card-deck">
+  <div class="card-deck justify-content-center">
     <div class="" *ngFor="let product of list | filter:phraseString:'name'">
       <app-product-card [product]="product"></app-product-card>
     </div>
