--- a/src/app/common/product-slider/product-slider.component.html
+++ b/src/app/common/product-slider/product-slider.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card-deck">
+  <div class="card-deck justify-content-center">
     <div class="d-flex justify-content-center" *ngFor="let product of featured">
       <app-product-card [product]="product"></app-product-card>
     </div>
