--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-success sticky-top">
   <a
-    class="navbar-brand"
+    class="navbar-brand navbar-brand-color"
     routerLink="/"
   >{{ appName }}</a>
   <button
@@ -22,7 +22,7 @@
     <ul class="navbar-nav mr-auto">
       <li *ngFor="let item of menuItems" class="nav-item">
         <a
-          class="nav-link text-white"
+          class="nav-link link-color"
           [routerLink]="item.link"
         >{{ item.text }}</a>
       </li>
