--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -6,14 +6,14 @@
     
 
     &:hover {
-        transform: scale(1.03);
-        box-shadow: 3px 3px rgba(116, 116, 116, 0.294);
+        transform: scale(1.02);
+        box-shadow: 3px 3px 10px rgba(116, 116, 116, 0.294);
     }
   
 
     .fit-image{
         width: 100%;
-        object-fit: contain;
+        object-fit: cover;
         height: 300px;
     }
 
