--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,13 @@
 <footer>
     <div class="my-4 container d-flex flex-column text-center">
-      <p>&copy; Powered by Kecskeméti lángos Kft. 2021. Minden jog fenntartva.</p>
-      <ul class="list-inline">
-          <li class="list-inline-item">
-              <a href="#">Elérhetőség</a>
-          </li>
-          <li class="list-inline-item">
-              <a href="#">Adatvédelem</a>
+        <p>&copy; Powered by Kecskeméti Lángos Kft. 2021. Minden jog fenntartva.
+        </p>
+        <ul class="list-inline">
+            <li class="list-inline-item">
+                <a href="#">Elérhetőség</a>
+            </li>
+            <li class="list-inline-item">
+                <a href="#">Adatvédelem</a>
             </li>
             <li class="list-inline-item">
                 <a href="#">ÁSZF</a>
@@ -16,7 +17,8 @@
             </li>
         </ul>
         <div>
-            <button class="btn btn-primary" (click)="scrollToTop()">Vissza a tetejére</button>
+            <button class="btn btn-primary" (click)="scrollToTop()">Vissza a
+                tetejére</button>
         </div>
     </div>
-  </footer>
+</footer>
