--- a/src/app/page/cat01/cat01.component.html
+++ b/src/app/page/cat01/cat01.component.html
@@ -1,10 +1,21 @@
 <h3 class="my-5 py-2 text-center subtitle">{{ featured }}</h3>
 <app-product-slider [featured]="featuredFive"></app-product-slider>
 <h3 class="my-5 py-2 text-center subtitle">{{title}}</h3>
-<div class="container">
-    <form class="form-inline my-3">
-      <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text" placeholder="Szűrés...">
-    </form>
+<div class="container d-flex flex-row">
+  <form class="form-inline my-3">
+    <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text" [placeholder]="placeholder">
+  </form>
+  <div class="dropdown my-3">
+    <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+      Szempontok...
+    </button>
+    <div class="dropdown-menu">
+      <span (click)="changeSearchKey('név')" class="dropdown-item">név</span>
+      <span (click)="changeSearchKey('leírás')" class="dropdown-item">leírás</span>
+      <span (click)="changeSearchKey('készlet')" class="dropdown-item">készlet</span>
+      <span (click)="changeSearchKey('ár')" class="dropdown-item">ár</span>
+    </div>
   </div>
-<app-product-list [phraseString]="phrase" [list]="categoryZero"></app-product-list>
+</div>
+<app-product-list [phraseString]="phrase" [searchKey]="searchkey" [list]="categoryZero"></app-product-list>
 <app-footer></app-footer>
