further refining of search

--- a/src/app/page/cat02/cat02.component.html
+++ b/src/app/page/cat02/cat02.component.html
@@ -2,20 +2,21 @@
 <app-product-slider [featured]="featuredFive"></app-product-slider>
 <h3 class="my-5 py-2 text-center subtitle">{{title}}</h3>
 <div class="container d-flex flex-row">
-    <form class="form-inline my-3">
-      <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text" [placeholder]="placeholder">
-    </form>
-    <div class="dropdown my-3">
-      <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
-        Szempontok...
-      </button>
-      <div class="dropdown-menu">
-        <span (click)="changeSearchKey('név')" class="dropdown-item">név</span>
-        <span (click)="changeSearchKey('leírás')" class="dropdown-item">leírás</span>
-        <span (click)="changeSearchKey('készlet')" class="dropdown-item">készlet</span>
-        <span (click)="changeSearchKey('ár')" class="dropdown-item">ár</span>
-      </div>
+  <form class="form my-3">
+    <div class="text-center mb-1">{{placeholder}}</div>
+    <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text">
+  </form>
+  <div class="dropdown mx-4 my-auto">
+    <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+      Szempontok...
+    </button>
+    <div class="dropdown-menu">
+      <span (click)="changeSearchKey('név')" class="dropdown-item">név</span>
+      <span (click)="changeSearchKey('leírás')" class="dropdown-item">leírás</span>
+      <span (click)="changeSearchKey('készlet')" class="dropdown-item">készlet</span>
+      <span (click)="changeSearchKey('ár')" class="dropdown-item">ár</span>
     </div>
   </div>
+</div>
 <app-product-list [phraseString]="phrase" [searchKey]="searchkey" [list]="categoryOne"></app-product-list>
 <app-footer></app-footer>
