--- a/src/app/page/cat01/cat01.component.html
+++ b/src/app/page/cat01/cat01.component.html
@@ -2,10 +2,11 @@
 <app-product-slider [featured]="featuredFive"></app-product-slider>
 <h3 class="my-5 py-2 text-center subtitle">{{title}}</h3>
 <div class="container d-flex flex-row">
-  <form class="form-inline my-3">
-    <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text" [placeholder]="placeholder">
+  <form class="form my-3">
+    <div class="text-center mb-1">{{placeholder}}</div>
+    <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text">
   </form>
-  <div class="dropdown my-3">
+  <div class="dropdown mx-4 my-auto">
     <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
       Szempontok...
     </button>
