--- a/src/app/common/product-slider/product-slider.component.html
+++ b/src/app/common/product-slider/product-slider.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card-deck justify-content-center">
     <div class="d-flex justify-content-center"
-      *ngFor="let product of featured.slice(0, 5)">
+      *ngFor="let product of randomFive(featured)">
       <app-product-card [product]="product"></app-product-card>
     </div>
   </div>
