--- a/src/app/common/product-card-editor/product-card-editor.component.html
+++ b/src/app/common/product-card-editor/product-card-editor.component.html
@@ -2,32 +2,41 @@
   <img [src]="product.image" class="card-img-top fit-image bg-light"
     alt="product_image">
   <div class="card-body bg-light d-flex flex-column">
-    <p><input type="text" value="{{product.image}}"></p>
-    <h6 class="card-title text-center"> <input type="text"
-        value="{{product.name}}"></h6>
-    <p class="text-muted"> <input type="text" value="{{product.description}}">
+    <p><input type="text" [(ngModel)]="product.image" value="{{product.image}}">
     </p>
-    <small class="text-muted">"ID: {{product.id}}"</small>
+    <h6 class="card-title text-center"> <input type="text"
+        [(ngModel)]="product.name" value="{{product.name}}"></h6>
+    <p class="text-muted"> <input type="text" [(ngModel)]="product.description"
+        value="{{product.description}}">
+    </p>
+    <small class="text-muted mb-2">"ID: {{product.id}}"</small>
+    <small>Kategória:</small>
     <p class="text-muted">
-      <input name="catid" type="text" value="{{product.catId}}">
+      <input name="catid" type="text" [(ngModel)]="product.catId"
+        value="{{product.catId}}">
     </p>
 
-    <div class="card-infos text-center">
+    <div class="card-infos">
       <p class="card-text mt-3">Jelenlegi készlet: <input type="text"
-          value="{{product.stock}}"></p>
+          [(ngModel)]="product.stock" value="{{product.stock}}"></p>
       <p class="card-text">Ár:
-        <del class="mr-2"><input type="text" value="{{product.price}}"></del>
+        <del class="mr-2"><input type="text" [(ngModel)]="product.price"
+            value="{{product.price}}"></del>
       </p>
       <p class="card-text">Akciós ár:
-        <del class="mr-2"><input type="text"
+        <del class="mr-2"><input type="text" [(ngModel)]="product.onsaleprice"
             value="{{product.onsaleprice}}"></del>
       </p>
+      <p class="card-text">Kiemelt: <input type="text"
+          [(ngModel)]="product.featured" value="{{product.featured}}">
+      </p>
       <p class="card-text">Akciós: <input type="text"
-          value="{{product.onsale}}">
+          [(ngModel)]="product.onsale" value="{{product.onsale}}">
       </p>
       <button class="btn btn-success mr-2" (click)="updateProduct(product)"><i
           class="fa fa-refresh"></i></button>
-      <button class="btn btn-danger" (click)="removeProduct(product)"><i class="fa fa-trash"></i></button>
+      <button class="btn btn-danger" (click)="removeProduct(product)"><i
+          class="fa fa-trash"></i></button>
     </div>
   </div>
 </div>
