delete works with page refresh

--- a/src/app/common/product-card-editor/product-card-editor.component.html
+++ b/src/app/common/product-card-editor/product-card-editor.component.html
@@ -35,7 +35,7 @@
       </p>
       <button class="btn btn-success mr-2" (click)="updateProduct(product)"><i
           class="fa fa-refresh"></i></button>
-      <button class="btn btn-danger" (click)="removeProduct(product)"><i
+      <button class="btn btn-danger" (click)="onDeleteButtonClick()"><i
           class="fa fa-trash"></i></button>
     </div>
   </div>
