--- a/src/app/common/data-editor/data-editor.component.html
+++ b/src/app/common/data-editor/data-editor.component.html
@@ -2,7 +2,7 @@
   <div class="card-deck justify-content-center">
     <div class="d-flex justify-content-center"
       *ngFor="let product of list | filter:phraseString:searchKey | sorter:filterKey">
-      <app-product-card-editor [product]="product"></app-product-card-editor>
+      <app-product-card-editor [product]="product" (deleteClick)="onDeleteButtonClick(product)"></app-product-card-editor>
     </div>
   </div>
 </div>
